IS-8493 (R) [SN new I/E] Import cards implementation (upsert cards)

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -65,6 +65,10 @@ paths:
           application/json:
             schema:
               type: array
+              items:
+                $ref: '#/components/schemas/CardInput'
+                x-stoplight:
+                  id: e1w5honxk8rns
       description: Used to upsert one or more cards.
   /cards/transfer:
     post:
