--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -65,6 +65,10 @@ paths:
           application/json:
             schema:
               type: array
+              items:
+                $ref: '#/components/schemas/CardInput'
+                x-stoplight:
+                  id: yn8ni649j87u3
       description: Used to upsert one or more cards.
   /cards/transfer:
     post:
