IS-8420 [SN new I/E] Telematic printer receipt data export endpoint

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -553,7 +553,7 @@ paths:
       description: Used to export OIL transactions filtered by input values. The maximum range between date_start and date_end is 7 days.
   /transactions/nonoil:
     get:
-      summary: Get cards transactions
+      summary: Get non oil transactions
       tags: []
       responses:
         '200':
