IS-8420 [SN new I/E] Telematic printer receipt data export endpoint (documentation)

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -575,7 +575,7 @@ paths:
           description: Forbidden
         '500':
           description: Internal Server Error
-      operationId: get-transactions
+      operationId: get-non-oil-transactions
       parameters:
         - schema:
             type: string
