IS-8420 [SN new I/E] Telematic printer receipt data export endpoint (refactoring)

--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -1371,7 +1371,7 @@ components:
           x-stoplight:
             id: 2f8zat671fu4i
           description: Closure number
-        cancelled:
+        is_cancelled:
           type: boolean
           x-stoplight:
             id: pfflmilkvd25f
